incorporating feedback from CR-PLFM-132